--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "author": "BitPay <dev@bitpay.com>",
   "version": "3.1.3",
   "main": "./index.js",
-  "repository": "git://github.com/bitpay/bitcore-node.git",
-  "homepage": "https://github.com/bitpay/bitcore-node",
+  "repository": "git://github.com/pittxid/bitcore-node.git",
+  "homepage": "https://github.com/pittxid/bitcore-node",
   "bugs": {
-    "url": "https://github.com/bitpay/bitcore-node/issues"
+    "url": "https://github.com/pittxid/bitcore-node/issues"
   },
   "contributors": [
     {
